After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 751482 - Enabling Bluetooth when airplane mode is on causes segfault
Enabling Bluetooth when airplane mode is on causes segfault
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Bluetooth
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-25 08:25 UTC by Allan Day
Modified: 2015-06-29 15:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
trace (2.30 KB, text/plain)
2015-06-25 08:25 UTC, Allan Day
  Details
trace (3.40 KB, text/plain)
2015-06-29 11:01 UTC, Allan Day
  Details
network: Fix possible crash when changing airplane mode (1.17 KB, patch)
2015-06-29 11:50 UTC, Bastien Nocera
committed Details | Review

Description Allan Day 2015-06-25 08:25:46 UTC
Created attachment 306075 [details]
trace

Turn on airplane mode, then go to the Bluetooth panel and turn it on: the control center segfaults. This consistently happens to me on Fedora 22.

I reproduced with gdb and have attached the result.
Comment 1 Bastien Nocera 2015-06-25 09:52:13 UTC
(In reply to Allan Day from comment #0)
> Created attachment 306075 [details]
> trace
> 
> Turn on airplane mode, then go to the Bluetooth panel and turn it on: the
> control center segfaults. This consistently happens to me on Fedora 22.
> 
> I reproduced with gdb and have attached the result.

You just need to type "bt" at the end to actually see the backtrace. The crash is likely due to the network panel leaking objects (we've already fixed a fair bunch of those), and I'm guessing it won't crash if you close the control-center in between opening the network panel, and the Bluetooth panel.
Comment 2 Allan Day 2015-06-29 11:01:17 UTC
Created attachment 306275 [details]
trace

OK, an actual backtrace this time.
Comment 3 Bastien Nocera 2015-06-29 11:50:48 UTC
Created attachment 306281 [details] [review]
network: Fix possible crash when changing airplane mode

When changing the airplane mode, either from the Bluetooth panel, or
through gnome-shell's status menu, we would receive signals from the
Rfkill gnome-settings-daemon service, even after the network panel was
closed, as we didn't unref' it. Except that the panel was mostly gone.
So splat.
Comment 4 Bastien Nocera 2015-06-29 15:50:59 UTC
Attachment 306281 [details] pushed as e9294e5 - network: Fix possible crash when changing airplane mode