network: Fix possible crash when changing airplane mode

When changing the airplane mode, either from the Bluetooth panel, or
through gnome-shell's status menu, we would receive signals from the
Rfkill gnome-settings-daemon service, even after the network panel was
closed, as we didn't unref' it. Except that the panel was mostly gone.
So splat.

https://bugzilla.gnome.org/show_bug.cgi?id=751482